--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^25.0.0",
+    "firebase": "^4.11.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-navigation": "^1.5.2",
+    "uuid": "^3.2.1"
   }
 }
