--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
-    "jest-expo": "25.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "jest-react-native": "^18.0.0",
     "react-test-renderer": "16.2.0"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "test": "node node_modules/jest/bin/jest.js",
+    "dev": "concurrently --kill-others --names \"BUNDLER,LOG\" \"react-native start\" \"react-native log-android\" "
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "react-native"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^25.0.0",
-    "firebase": "^4.11.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-navigation": "^1.5.2",
     "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0"
   }
 }
