before fixing lists

--- a/package.json
+++ b/package.json
@@ -2,17 +2,12 @@
   "name": "react-native-todo",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.2.0"
-  },
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js",
-    "dev": "concurrently --kill-others --names \"BUNDLER,LOG\" \"react-native start\" \"react-native log-android\" "
+    "dev": "concurrently --kill-others --names \"BUNDLER,LOG\" \"react-native start\" \"react-native log-android\"  "
   },
   "jest": {
     "preset": "react-native"
@@ -22,9 +17,15 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-navigation": "^1.5.2",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "jest-react-native": "^18.0.0",
+    "react-test-renderer": "16.2.0",
     "concurrently": "^3.5.0"
   }
 }
