--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.2",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
