--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js",
-    "dev": "concurrently --kill-others --names \"BUNDLER,LOG\" \"react-native start\" \"react-native log-android\"  "
+    "ios": "react-native run-ios"
   },
   "jest": {
     "preset": "react-native"
@@ -16,6 +14,8 @@
     "axios": "^0.18.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-share": "^1.0.27",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.2",
     "react-redux": "^5.0.7",
@@ -26,7 +26,6 @@
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.2.0",
-    "concurrently": "^3.5.0"
+    "react-test-renderer": "16.2.0"
   }
 }
